--- a/style/style.css
+++ b/style/style.css
@@ -1,17 +1,3 @@
-/* Light/Dark mode */
-@media (prefers-color-scheme: light) {
-  body {
-    background-color: white;
-    color: black;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: black;
-    color: white;
-  }
-}
-
 /* Global CSS */
 textarea {
   font-size: 12px;
@@ -25,9 +11,6 @@ textarea {
 }
 input[type="checkbox"] {
   cursor: pointer;
-}
-input[type="checkbox"]:checked {
-  background-color: black;
 }
 div.box {
   margin-top: 10px;
@@ -47,7 +30,8 @@ form.charsheet div.textblock {
 }
 form.charsheet div.textblock label {
   text-align: center;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-top: 0;
   font-size: 10px;
   width: calc(100% - 24px);
@@ -56,7 +40,8 @@ form.charsheet div.textblock label {
   font-weight: bold;
 }
 form.charsheet textarea {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
 }
 form.charsheet ul {
   margin: 0;
@@ -65,15 +50,6 @@ form.charsheet ul {
 form.charsheet ul li {
   list-style-image: none;
   display: block;
-}
-form.charsheet ::-moz-placeholder {
-  color: #bbb;
-}
-form.charsheet :-ms-input-placeholder {
-  color: #bbb;
-}
-form.charsheet ::placeholder {
-  color: #bbb;
 }
 form.charsheet label {
   text-transform: uppercase;
@@ -91,11 +67,11 @@ form.charsheet div.extraspage {
 }
 form.charsheet header section.charname,
 form.charsheet header section.spellcastingclassandability {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-right: 0;
   border-radius: 10px 0 0 10px;
   padding: 5px 0;
-  background-color: #eee;
   width: 30%;
   display: flex;
   flex-direction: column-reverse;
@@ -113,7 +89,8 @@ form.charsheet header section.charname label {
 }
 form.charsheet header section.misc {
   width: 100%;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   padding-left: 1em;
   padding-right: 1em;
@@ -133,8 +110,8 @@ form.charsheet header section.misc ul li label {
 }
 form.charsheet header section.misc ul li input {
   width: calc(100% - 10px);
-  border: 0;
-  border-bottom: 1px solid #ddd;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
 }
 form.charsheet header section.data ul li {
   padding: 5px;
@@ -151,7 +128,8 @@ form.charsheet main div.label-container {
   width: 100%;
   height: 18px;
   margin-top: 6px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-left: 0;
   text-align: center;
 }
@@ -180,7 +158,6 @@ form.charsheet main > section section.attributes {
 form.charsheet main > section section.attributes div.scores {
   width: 101px;
   height: 100%;
-  background-color: #bbb;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -204,8 +181,8 @@ form.charsheet main > section section.attributes div.scores ul li {
   width: 100%;
   height: calc(16% - 5px);
   margin: 0px;
-  background-color: white;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -227,7 +204,6 @@ form.charsheet
   input {
   text-align: center;
   font-size: 40px;
-  background: white;
   width: calc(100% - 5px);
 }
 form.charsheet main > section section.attributes div.scores ul li div.modifier {
@@ -242,9 +218,9 @@ form.charsheet
   li
   div.modifier
   input {
-  background: white;
   width: 50%;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 20px;
   margin: 0px;
   text-align: center;
@@ -274,7 +250,8 @@ form.charsheet
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   padding: 15px;
   border-radius: 10px;
 }
@@ -298,7 +275,8 @@ form.charsheet
   width: 26px;
   height: 24px;
   padding: 2px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   text-align: center;
   border-radius: 10px;
 }
@@ -308,7 +286,8 @@ form.charsheet
   section.attributes
   div.attr-applications
   div.list-section {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   padding: 5px 5px 0px 0px;
 }
@@ -370,24 +349,12 @@ form.charsheet
   div.list-section
   ul
   li
-  label
-  span.skillstat {
-  color: #bbb;
-}
-form.charsheet
-  main
-  > section
-  section.attributes
-  div.attr-applications
-  div.list-section
-  ul
-  li
   input[type="text"] {
   width: 30px;
   font-size: 12px;
   text-align: center;
   border: 0;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid;
   order: 2;
 }
 form.charsheet
@@ -404,7 +371,8 @@ form.charsheet
   appearance: none;
   width: 10px;
   height: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   order: 1;
 }
@@ -418,7 +386,8 @@ form.charsheet main > section div.passive-perception input {
   height: 24px;
   padding: 2px;
   text-align: center;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
 }
 form.charsheet main > section div.otherprofs {
@@ -429,7 +398,6 @@ form.charsheet main > section div.otherprofs textarea {
   height: 100%;
 }
 form.charsheet main section.combat {
-  background-color: #eee;
   display: flex;
   flex-wrap: wrap;
   border-radius: 10px;
@@ -455,9 +423,9 @@ form.charsheet main section.combat > div.initiative > div label,
 form.charsheet main section.combat > div.speed > div label {
   font-size: 8px;
   width: 50px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-top: 0;
-  background-color: white;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -470,7 +438,8 @@ form.charsheet main section.combat > div.speed > div input {
   width: 60px;
   padding: 5px;
   border-radius: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   text-align: center;
   font-size: 30px;
 }
@@ -478,8 +447,8 @@ form.charsheet main section.combat > div.hp {
   flex-basis: 100%;
 }
 form.charsheet main section.combat > div.hp > div.regular {
-  background-color: white;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   margin: 10px;
   margin-bottom: 5px;
   border-radius: 10px 10px 0 0;
@@ -488,16 +457,16 @@ form.charsheet main section.combat > div.hp > div.regular > div.max {
   display: flex;
   justify-content: space-around;
   align-items: baseline;
+  margin-top: 0.25em;
 }
 form.charsheet main section.combat > div.hp > div.regular > div.max label {
   font-size: 10px;
   text-transform: none;
-  color: #bbb;
 }
 form.charsheet main section.combat > div.hp > div.regular > div.max input {
   width: 40%;
   border: 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid;
   font-size: 12px;
   text-align: center;
 }
@@ -505,7 +474,8 @@ form.charsheet main section.combat > div.hp > div.regular > div.current {
   display: flex;
   flex-direction: column-reverse;
 }
-form.charsheet main section.combat > div.hp > div.regular > div.current input {
+form.charsheet main section.combat > div.hp > div.regular > div.current input,
+form.charsheet main section.combat > div.hp > div.temporary input {
   border: 0;
   margin: 10px;
   padding: 0;
@@ -521,20 +491,11 @@ form.charsheet main section.combat > div.hp > div.regular > div.current label {
 form.charsheet main section.combat > div.hp > div.temporary {
   margin: 10px;
   margin-top: 0;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 0 0 10px 10px;
   display: flex;
   flex-direction: column-reverse;
-  background-color: white;
-  justify-content: center;
-  align-items: center;
-}
-form.charsheet main section.combat > div.hp > div.temporary input {
-  border: 0;
-  margin: 10px;
-  padding: 0;
-  font-size: 20px;
-  text-align: center;
 }
 form.charsheet main section.combat > div.hp > div.temporary label {
   font-size: 10px;
@@ -552,9 +513,9 @@ form.charsheet main section.combat > div.deathsaves > div {
   height: 80px;
 }
 form.charsheet main section.combat > div.hitdice > div {
-  background-color: white;
   margin: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -567,7 +528,6 @@ form.charsheet main section.combat > div.hitdice > div > div.total {
 }
 form.charsheet main section.combat > div.hitdice > div > div.total label {
   font-size: 10px;
-  color: #bbb;
   margin: 0.25em;
   text-transform: none;
 }
@@ -575,7 +535,7 @@ form.charsheet main section.combat > div.hitdice > div > div.total input {
   font-size: 12px;
   flex-grow: 1;
   border: 0;
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid;
   width: 50%;
   margin-right: 0.25em;
   padding: 0 0.25em;
@@ -599,8 +559,8 @@ form.charsheet main section.combat > div.hitdice > div > div.remaining input {
 }
 form.charsheet main section.combat > div.deathsaves > div {
   margin: 10px;
-  background: white;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   display: flex;
   flex-direction: column-reverse;
@@ -670,11 +630,13 @@ form.charsheet
   appearance: none;
   width: 10px;
   height: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
 }
 form.charsheet main section.attacksandspellcasting {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   margin-top: 10px;
 }
@@ -692,21 +654,21 @@ form.charsheet main section.attacksandspellcasting > div > table {
 }
 form.charsheet main section.attacksandspellcasting > div > table th {
   font-size: 10px;
-  color: #ddd;
 }
 form.charsheet main section.attacksandspellcasting > div > table input {
   width: calc(100% - 4px);
   border: 0;
-  background-color: #eee;
   font-size: 10px;
   padding: 3px;
 }
 form.charsheet main section.attacksandspellcasting > div textarea {
   border: 0;
+  margin-top: 0.5em;
   width: calc(100% - 10px);
 }
 form.charsheet main section.equipment {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   margin-top: 10px;
   height: 100%;
@@ -729,7 +691,8 @@ form.charsheet main section.equipment > div > div.money ul > li {
   align-items: center;
 }
 form.charsheet main section.equipment > div > div.money ul > li label {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px 0 0 10px;
   border-right: 0;
   width: 20px;
@@ -738,7 +701,8 @@ form.charsheet main section.equipment > div > div.money ul > li label {
   padding: 3px 0;
 }
 form.charsheet main section.equipment > div > div.money ul > li input {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   width: 40px;
   padding: 10px 3px;
@@ -757,15 +721,14 @@ form.charsheet main section.equipment > div > textarea {
 }
 form.charsheet main section.flavor {
   padding: 10px;
-  background: #bbb;
   border-radius: 10px;
 }
 form.charsheet main section.flavor div {
-  background: white;
   display: flex;
   flex-direction: column-reverse;
   padding: 5px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
 }
 form.charsheet main section.flavor div label {
   text-align: center;
@@ -793,7 +756,8 @@ form.charsheet main section.features {
 }
 form.charsheet main section.features div {
   padding: 0px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   display: flex;
   flex-direction: column-reverse;
@@ -821,7 +785,8 @@ form.charsheet section.spellcastingclassandability label {
 form.charsheet section.spellcastingmisc {
   width: 70%;
   height: 80px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   padding: 0.25em 0.5em 0.25em 0.5em;
   text-align: center;
@@ -841,7 +806,8 @@ form.charsheet section.spellcastingmisc div input {
   text-align: center;
   width: 35%;
   border-radius: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   padding: 5px;
   font-size: 24px;
 }
@@ -903,7 +869,8 @@ form.charsheet
   section.spellheader
   section.spelllevel {
   float: left;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   margin: 0;
   width: 80px;
@@ -920,7 +887,8 @@ form.charsheet
   div
   section.spellheader
   section.cantripslabel {
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-left: 0;
   border-radius: 0 10px 10px 0;
   margin: 0.4em 0 0.4em 0;
@@ -935,7 +903,8 @@ form.charsheet
 form.charsheet section.spellheader section.spelllabel {
   width: 100%;
   height: 45px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-left: 0;
   border-radius: 0 10px 10px 0;
   text-align: center;
@@ -963,7 +932,8 @@ form.charsheet section.spellheader section.spelllabel div input {
   padding: 2px;
   width: 35%;
   border-radius: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
 }
 form.charsheet div.spellcastingpage main div div.level0 {
   height: 25%;
@@ -1020,7 +990,8 @@ form.charsheet
   appearance: none;
   width: 10px;
   height: 10px;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-radius: 10px;
   order: 1;
 }
@@ -1028,6 +999,8 @@ form.charsheet
   width: 100%;
   /*font-size: 12px;*/
   margin-left: 5px;
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
 }
 
 /* Page 3: Extras */
@@ -1056,7 +1029,8 @@ form.charsheet div.extraspage main div section textarea {
 }
 form.charsheet div.extraspage main div section label {
   text-align: center;
-  border: 1px solid black;
+  border-width: 1px;
+  border-style: solid;
   border-top: 0;
   font-size: 10px;
   width: calc(100% - 24px);
