--- a/profButton/style/dark.css
+++ b/profButton/style/dark.css
@@ -10,7 +10,7 @@
 
   /*No proficiency*/
   .skillprofbox div.state0 {
-    background-color: black;
+    background-color: #444;
   }
 
   /*Proficiency*/
