--- a/style/color.css
+++ b/style/color.css
@@ -1,38 +1,45 @@
 :root {
-  /* Defaults -> Light */
+  /* Defaults */
   --background: rgba(255, 255, 255, 1); /*white*/
-  --offBackground1: rgba(238, 238, 238, 1); /*custom*/
-  --offBackground2: rgba(221, 221, 221, 1); /*custom*/
-  --offBackground3: rgba(187, 187, 187, 1); /*custom*/
+  --offBackground1: rgba(238, 238, 238, 1); /*custom (#eee)*/
+  --offBackground2: rgba(221, 221, 221, 1); /*custom (#ddd)*/
+  --offBackground3: rgba(187, 187, 187, 1); /*custom (#bbb)*/
   --inverseBackground: rgba(0, 0, 0, 1); /*black*/
   --text: rgba(0, 0, 0, 1); /*black*/
+  --textBackground: rgba(255, 255, 255, 1); /*white*/
+  --textPlaceholder: var(--offBackground3); /*custom (#bbb)*/
 
   /* Constants */
+  --faintBlue: rgba(0, 0, 255, 0.25); /*blue*/
   --white: rgba(255, 255, 255, 1); /*white*/
   --black: rgba(0, 0, 0, 1); /*black*/
   --clear: rgba(0, 0, 0, 0); /*clear*/
 }
 
-/* Light mode*/
+/* Light mode [default]*/
 @media (prefers-color-scheme: light) {
   :root {
     --background: rgba(255, 255, 255, 1); /*white*/
-    --offBackground1: rgba(238, 238, 238, 1); /*custom*/
-    --offBackground2: rgba(221, 221, 221, 1); /*custom*/
-    --offBackground3: rgba(187, 187, 187, 1); /*custom*/
+    --offBackground1: rgba(238, 238, 238, 1); /*custom (#eee)*/
+    --offBackground2: rgba(221, 221, 221, 1); /*custom (#ddd)*/
+    --offBackground3: rgba(187, 187, 187, 1); /*custom (#bbb)*/
     --inverseBackground: rgba(0, 0, 0, 1); /*black*/
     --text: rgba(0, 0, 0, 1); /*black*/
+    --textBackground: rgba(255, 255, 255, 1); /*white*/
+    --textPlaceholder: var(--offBackground3); /*custom (#bbb)*/
   }
 }
 
-/* Dark mode [default]*/
+/* Dark mode*/
 @media (prefers-color-scheme: dark) {
   :root {
     --background: rgba(0, 0, 0, 1); /*black*/
-    --offBackground1: rgba(17, 17, 17, 1); /*custom*/
-    --offBackground2: rgba(34, 34, 34, 1); /*custom*/
-    --offBackground3: rgba(68, 68, 68, 1); /*custom*/
+    --offBackground1: rgba(17, 17, 17, 1); /*custom (#111)*/
+    --offBackground2: rgba(34, 34, 34, 1); /*custom (#222)*/
+    --offBackground3: rgba(68, 68, 68, 1); /*custom (#444)*/
     --inverseBackground: rgba(255, 255, 255, 1); /*white*/
     --text: rgba(255, 255, 255, 1); /*white*/
+    --textBackground: var(--offBackground3); /*custom (#444)*/
+    --textPlaceholder: var(--inverseBackground); /*white*/
   }
 }
