--- a/style/main.css
+++ b/style/main.css
@@ -1,16 +1,29 @@
 /* Global CSS */
-body {
+:root {
   background-color: var(--background);
+  color: var(--text);
+  border-color: var(--inverseBackground);
+
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  overflow: auto;
 }
-input,
-textarea {
-  background-color: var(--textBackground);
-}
-body,
+button,
 input,
 textarea {
   color: var(--text);
   border-color: var(--inverseBackground);
+  background-color: var(--textBackground);
+}
+button,
+input,
+label,
+textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
 }
 textarea {
   font-size: 12px;
