[1.6.7] Remove .txt support
* Remove support for .txt character data files. Only .json's are to be used now.
* Remove button data button highlight on focus.
* Clean up and improve some js is jsonHandler and profButton/main.
* Change character data file name to replace spaces with underscores.

--- a/style/main.css
+++ b/style/main.css
@@ -176,8 +176,7 @@ form.charsheet header section.data ul li button {
   color: var(--text);
   border-radius: 0.25em;
 }
-form.charsheet header section.data ul li button:hover,
-form.charsheet header section.data ul li button:focus {
+form.charsheet header section.data ul li button:hover {
   background-color: var(--offBackground3);
 }
 form.charsheet header section.data ul li button:active {
